[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Extensions/SpritesheetPreview/Main.gd" type="Script" id=1]
[ext_resource path="res://src/Extensions/SpritesheetPreview/TransparentChecker.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float size = 10.0;
uniform float alpha = 1.0;
uniform vec4 color1 : hint_color = vec4(0.7, 0.7, 0.7, 1.0);
uniform vec4 color2 : hint_color = vec4(1.0);
uniform vec2 offset = vec2(0.0);
uniform vec2 scale = vec2(0.0);
uniform vec2 rect_size = vec2(0.0);
uniform bool follow_movement = false;
uniform bool follow_scale = false;

void fragment() {
	vec2 ref_pos = FRAGCOORD.xy;
	if (follow_scale) {
		if (!follow_movement)
			ref_pos /= scale;
		else
			ref_pos = UV * rect_size;
	}
	else if (follow_movement)
		ref_pos -= mod(offset, size * 2.0);
	
	vec2 pos = mod(ref_pos, size * 2.0);
	bool c1 = any(lessThan(pos, vec2(size)));
	bool c2 = any(greaterThanEqual(pos, vec2(size)));
	float c = c1 && c2 ? 1.0: 0.0;
	COLOR = mix(color1, color2, c);
	COLOR.a = alpha;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/size = 10.0
shader_param/alpha = 1.0
shader_param/color1 = Color( 0.7, 0.7, 0.7, 1 )
shader_param/color2 = Color( 1, 1, 1, 1 )
shader_param/offset = Vector2( 0, 0 )
shader_param/scale = Vector2( 0, 0 )
shader_param/rect_size = Vector2( 0, 0 )
shader_param/follow_movement = false
shader_param/follow_scale = false

[node name="Main" type="Panel"]
margin_right = 297.0
margin_bottom = 256.0
rect_min_size = Vector2( 337, 296 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 317.0
margin_bottom = 14.0
mouse_filter = 0
mouse_default_cursor_shape = 6
text = "SpriteSheet Preview"
align = 1
valign = 1

[node name="Preview" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 317.0
margin_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PreviewPanel" type="Panel" parent="VBoxContainer/Preview"]
margin_right = 317.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TransparentChecker" type="ColorRect" parent="VBoxContainer/Preview/PreviewPanel"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Preview/PreviewPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Previews" type="GridContainer" parent="VBoxContainer/Preview/PreviewPanel/ScrollContainer"]
margin_right = 317.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Orientation" type="HBoxContainer" parent="VBoxContainer/Preview"]
margin_top = 234.0
margin_right = 317.0
margin_bottom = 258.0
alignment = 1

[node name="OrientationLabel" type="Label" parent="VBoxContainer/Preview/Orientation"]
margin_top = 5.0
margin_right = 77.0
margin_bottom = 19.0
text = "Orientation:"

[node name="Orientation" type="OptionButton" parent="VBoxContainer/Preview/Orientation"]
margin_left = 81.0
margin_right = 165.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Rows"
items = [ "Rows", null, false, 0, null, "Columns", null, false, 1, null ]
selected = 0

[node name="LinesCountLabel" type="Label" parent="VBoxContainer/Preview/Orientation"]
margin_left = 169.0
margin_top = 5.0
margin_right = 229.0
margin_bottom = 19.0
text = "Columns:"

[node name="LinesCount" type="SpinBox" parent="VBoxContainer/Preview/Orientation"]
margin_left = 233.0
margin_right = 317.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = 1.0
value = 1.0
rounded = true

[node name="RefreshTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_Main_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Main_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer/Title" to="." method="_on_Title_gui_input"]
[connection signal="item_selected" from="VBoxContainer/Preview/Orientation/Orientation" to="." method="_on_Orientation_item_selected"]
[connection signal="value_changed" from="VBoxContainer/Preview/Orientation/LinesCount" to="." method="_on_LinesCount_value_changed"]
[connection signal="timeout" from="RefreshTimer" to="." method="_on_RefreshTimer_timeout"]
